@@ -1,164 +1,154 @@
-# Real-Time Retail Inventory Platform
+# System Design Projects
 
-A runnable, interview-ready Java backend that combines three related problems:
+This folder is organized for hands-on backend learning and interview explanation. Projects live directly under this directory. Old wrapper folders such as `capstone-projects` and `Backend5` are archived locally under `_archive`; generated learning metadata lives locally under `_meta`. Both local-only folders are ignored by Git.
 
-1. real-time inventory visibility across thousands of stores;
-2. latest-state computation from an unordered inventory-update stream;
-3. exact and time-window duplicate transaction detection.
+## Recommended Learning Path
 
-The local vertical slice uses Spring Boot, JPA, H2/PostgreSQL, Actuator, Prometheus metrics, and deterministic algorithms. The production design evolves the same contracts to Kafka, partitioned stream processors, Redis, and a distributed durable store without changing the API semantics.
+Do not merge everything into one giant application. For interviews, it is stronger to have one or two deep flagship projects plus smaller focused labs you can explain quickly.
 
-## What this project proves
+1. `trading-risk-platform`
+   - Best live interview demo for risk/exchange discussion.
+   - Includes a standalone `pretrade-risk-engine` with accepted/rejected orders, FIX input, fail-closed checks, market-data freshness, kill switch, circuit breaker, audit trail, race-condition demo, and P&L.
+2. `exchange-lite`
+   - Best low-level exchange internals project.
+   - Shows order book, binary protocol, engine runtime, IPC, sidecar, and CLI operations.
+3. `mini-risk-management-platform`
+   - Best broader microservices/platform project.
+   - Shows API gateway, order/risk/history/notification services, PostgreSQL, Kafka, Redis, Docker Compose, Kubernetes, metrics, and dashboards.
+4. Specialized capstones
+   - Use `reliable-order-platform` for outbox/idempotency/ops, `ai-risk-fraud-investigation-assistant` for guarded AI casework, and `cloud-ai-coding-agent` for agent orchestration and sandboxing.
+5. Focused services and labs
+   - Use these to practice one concept at a time: auth, CRUD, URL shortener, notification retries, scheduling, ride matching, fraud scoring, caching, queues, web servers, and KV storage.
 
-- A higher source version wins even if inventory events arrive out of order.
-- Replaying the same `updateId` does not alter state.
-- Store-level state and cross-store summaries are queryable through HTTP.
-- Exact and near-duplicate payments are grouped using normalized business fields.
-- The core algorithms are separated from framework code and covered by tests.
-- The local implementation is explicitly mapped to production-scale components.
+## Consolidation Decision
 
-It does **not** claim that one Spring Boot process is the production topology. Kafka, distributed state, Redis, and multi-region deployment are architecture boundaries documented in this repository rather than silently mocked.
+The current layout should stay as separate runnable projects, not one giant application. The apparent overlaps have different interview purposes:
 
-## System at a glance
+- `fraud-detection-platform` is the deterministic scoring service; `ai-risk-fraud-investigation-assistant` is the casework, RAG, approval, and audit layer.
+- `ecommerce-backend` teaches inventory, order, and payment flow; `reliable-order-platform` teaches idempotency, transactional outbox, consumer dedupe, JWT, and operations.
+- `exchange-lite`, `trading-risk-platform`, and `mini-risk-management-platform` should stay separate because they teach matching-engine internals, pre-trade risk, and microservice/platform architecture respectively.
+- `java-concurrency-lab` is not another risk product; it is a failure-first concurrency lab.
+- `dropbox-file-sync-demo` and `cloud-ai-coding-agent` are unique domains and should remain standalone.
 
-```mermaid
-flowchart LR
-  Store["Retail stores / POS / WMS"] -->|"versioned absolute state"| Ingest["Ingestion API"]
-  Ingest -->|"local"| Projector["Inventory projector"]
-  Projector --> State[("Latest inventory state")]
-  Query["Query API"] --> State
-  Client["Web, mobile, associate apps"] --> Query
-  Tx["Transaction dataset"] --> Dedup["Duplicate detector"]
-  Dedup --> Review["Duplicate groups"]
-```
+## Active Projects
 
-In production, the direct ingestion-to-projector call becomes a durable Kafka boundary. See [ARCHITECTURE.md](ARCHITECTURE.md) for the full topology and failure flows.
+| Folder | Purpose |
+| --- | --- |
+| `product-catalog-api` | CRUD API with product lifecycle, validation, duplicate SKU handling, PostgreSQL/Flyway shape. |
+| `authentication-service` | Registration, login, JWT, roles, mock OAuth2 flow. |
+| `url-shortener` | Short-code generation, redirects, hit tracking, Redis-style rate limiting. |
+| `distributed-database` | TCP key-value cluster with replication, quorum behavior, consistent hashing, recovery. |
+| `distributed-database/labs/replicated-log-simulation` | Focused replicated log and partition/slowness simulation. |
+| `ecommerce-backend` | Inventory reservation, order creation, payments, order events. |
+| `notification-platform` | Multi-channel notification, retry, dead-letter behavior. |
+| `distributed-task-scheduler` | Job scheduling, retries, worker flow, leader/lock concept. |
+| `ride-sharing-backend` | Driver location, nearby search, ride request/status flow. |
+| `fraud-detection-platform` | Transaction event ingestion and risk scoring. |
+| `ai-risk-fraud-investigation-assistant` | Guarded AI fraud casework with deterministic rules, RAG citations, RBAC, approvals, audit, and outbox seams. |
+| `hotel-booking-service` | Hotel read/search/delete API, basic auth, browser UI, OpenAPI, metrics. |
+| `employee-document-upload-system` | Signed upload intent, document review policy, security roles, infra docs. |
+| `dropbox-file-sync-demo` | Dropbox-style sync invariants with chunk upload, version commits, conflict copies, tombstones, and cursor replay. |
+| `exchange-lite` | Matching engine, risk checks, binary protocol, engine/sidecar/CLI runtime. |
+| `trading-risk-platform` | Venue-neutral risk platform plus live pre-trade risk engine demo. |
+| `mini-risk-management-platform` | Java 21 microservices risk platform with Docker/Kubernetes/observability. |
+| `reliable-order-platform` | Java 21 reliability project for idempotent order creation, transactional outbox, consumer dedupe, JWT, Redis, Kafka, and ops. |
+| `real-time-inventory-platform` | Versioned retail inventory visibility, latest-state stream reduction, and exact/time-window transaction deduplication. |
+| `cloud-ai-coding-agent` | Cloud coding-agent demo with React, Spring Boot, WebSockets, provider-neutral LLM boundary, and Docker sandboxing. |
+| `java-concurrency-lab` | Java 21 backend concurrency lab with failure demos, bounded executors, locks, atomics, JMH, and JFR. |
+| `cache-lab` | LRU plus TTL cache behavior and metrics. |
+| `message-queue-lab` | Queue retry, acknowledgement, and dead-letter behavior. |
+| `mini-kv-storage-engine` | WAL-backed key-value store with TTL and compaction. |
+| `web-server-lab` | Minimal blocking HTTP server. |
 
-## Run it
+## Documentation Standard
 
-Requirements: Java 17+ and Maven 3.9+.
+Each active project now has Markdown learning support. For most projects, start with:
+
+- `README.md`: business purpose, stack, run commands, and smoke test.
+- `docs/INTERVIEW_GUIDE.md`: two-minute pitch, tradeoffs, failure cases, and FAQ.
+- `docs/DIAGRAMS.md`: Mermaid architecture and request-flow diagrams.
+- `docs/DEMO_SCRIPT.md`: exact commands and talking points for a live interview demo.
+
+Flagship projects may include additional deeper material such as ADRs, incident drills, operations guides, technology deep dives, and appendices.
+
+## Verification Notes
+
+Last portfolio audit: 2026-08-05. Focused consolidation re-audit: 2026-08-13. Real-time inventory platform added and verified: 2026-08-16.
+
+- Java 17 and Maven 3.9 are available as the default toolchain.
+- JDK 21 is not installed locally. `mini-risk-management-platform` targets Java 21; it was verified with the installed IntelliJ JDK 25 using `-Dnet.bytebuddy.experimental=true`.
+- Docker, Docker Compose, and kubectl CLIs are on PATH, but the Docker daemon is not reachable from this terminal and kubectl has no current context. Full container and cluster smoke tests still require a responsive Docker Desktop engine and Kubernetes context.
+- The old `Booking` folder has been archived as `_archive/2026-08-05-flattened-wrappers/Booking-legacy`. Use `hotel-booking-service` as the active copy.
+- The 2026-08-13 re-audit found no project that should be merged immediately. It updated the active list and documentation standard for the newer tracked projects.
+- Docker Compose structural validation passed for 17 files. Kubernetes offline checks passed for four kustomization directories and 41 raw resource files, but Kubernetes runtime apply tests are not confirmed without a cluster.
+- Focused runtime checks passed for `dropbox-file-sync-demo`, `java-concurrency-lab`, `ai-risk-fraud-investigation-assistant`, `reliable-order-platform`, and the frontend part of `cloud-ai-coding-agent`. The cloud-agent backend Gradle test was not run locally because Gradle is not installed and the project has no wrapper; its Dockerfile builds through a Gradle image once Docker Desktop is working.
+- `real-time-inventory-platform` passed all six Maven unit/integration tests and a live H2-backed HTTP smoke test. Its PostgreSQL Compose topology is provided but was not runtime-validated in that check.
+
+## Common Verification Commands
+
+For most Java 17 projects:
 
 ```powershell
-mvn clean verify
+mvn test
+mvn "-DskipTests" package
+```
+
+For `employee-document-upload-system`:
+
+```powershell
+cd app
+mvn test
+mvn "-DskipTests" package
+```
+
+For `mini-risk-management-platform` until a real JDK 21 is installed:
+
+```powershell
+$jdk = "C:\Users\Chiranjeev Jain\.jdks\openjdk-25"
+$env:JAVA_HOME = $jdk
+$env:Path = "$jdk\bin;$env:Path"
+mvn "-Dnet.bytebuddy.experimental=true" test
+mvn "-Dnet.bytebuddy.experimental=true" "-DskipTests" package
+```
+
+For the fast live pre-trade demo:
+
+```powershell
+cd G:\TechStudyNotes\SystemDesignProjects\trading-risk-platform
+mvn -pl pretrade-risk-engine spring-boot:run
+```
+
+Open `http://localhost:8090`.
+
+For the exchange engine demo:
+
+```powershell
+cd G:\TechStudyNotes\SystemDesignProjects\exchange-lite
+mvn test
+mvn package
+```
+
+Then follow the three-terminal engine, sidecar, and CLI commands in `exchange-lite/README.md`.
+
+For the Dropbox-style sync demo:
+
+```powershell
+cd G:\TechStudyNotes\SystemDesignProjects\dropbox-file-sync-demo
+mvn test
+powershell -ExecutionPolicy Bypass -File scripts\smoke-test.ps1
 mvn spring-boot:run
 ```
 
-Use `requests.http` from IntelliJ/VS Code, or in another terminal:
+Open `http://127.0.0.1:8080`.
+
+For the Java concurrency lab:
 
 ```powershell
-./scripts/demo.ps1
+cd G:\TechStudyNotes\SystemDesignProjects\java-concurrency-lab
+$jdk = "C:\Users\Chiranjeev Jain\.jdks\openjdk-25"
+$env:JAVA_HOME = $jdk
+$env:Path = "$jdk\bin;$env:Path"
+mvn test
+mvn exec:java "-Dexec.args=safe 100000"
+mvn exec:java "-Dexec.args=failures"
 ```
-
-The default H2 database is in memory. For PostgreSQL:
-
-```powershell
-mvn clean package
-docker compose up --build
-```
-
-## Five-minute demo
-
-1. Run `mvn clean verify` and show all unit and API integration tests passing.
-2. Start the service with `mvn spring-boot:run`.
-3. Execute `./scripts/demo.ps1` or the calls in `requests.http`.
-4. Observe version 2 being applied, version 1 being ignored, and quantity remaining at 25.
-5. Replay the version 2 update and observe `DUPLICATE_IGNORED`.
-6. Call the transaction endpoint and observe one duplicate group.
-7. Inspect `/actuator/prometheus` for result-labelled update counters.
-
-## Core correctness rules
-
-- The materialized key is `(sku, storeId)`, because availability is store-specific.
-- Every source must provide a monotonically increasing `version` per key.
-- Higher version wins even when events arrive out of order.
-- Equal versions use `eventTime`, then `updateId`, for deterministic convergence.
-- Repeated `updateId` values are idempotently ignored.
-- Quantity is an absolute on-hand state, not a delta; delta events require ordered processing and different recovery semantics.
-- Amounts use integer cents, never floating point.
-
-The winning order is the tuple `(version, eventTime, updateId)`. Version is authoritative; the other fields only make equal-version conflicts converge deterministically. Equal versions from different writers should still trigger operational investigation because they violate the ownership contract.
-
-## End-to-end update flow
-
-```mermaid
-sequenceDiagram
-  participant S as Store source
-  participant A as Update API
-  participant I as Idempotency store
-  participant P as Inventory projection
-  S->>A: POST updateId, SKU, store, quantity, version
-  A->>I: Has updateId been processed?
-  alt repeated updateId
-    I-->>A: Yes
-    A-->>S: DUPLICATE_IGNORED
-  else first delivery
-    I-->>A: No
-    A->>P: Read current SKU/store version
-    alt candidate is newer
-      A->>P: Persist candidate state
-      A-->>S: APPLIED
-    else candidate is older
-      A-->>S: STALE_IGNORED with current state
-    end
-  end
-```
-
-## APIs
-
-| Method | Endpoint | Purpose |
-|---|---|---|
-| POST | `/api/v1/inventory/updates` | Apply one idempotent update |
-| POST | `/api/v1/inventory/updates/batch` | Apply a batch |
-| GET | `/api/v1/inventory/{sku}/stores/{storeId}` | Store-level availability |
-| GET | `/api/v1/inventory/{sku}` | All reporting stores |
-| GET | `/api/v1/inventory/{sku}/summary` | Aggregate availability |
-| POST | `/api/v1/transactions/duplicates?windowSeconds=300` | Exact or near duplicates |
-| GET | `/actuator/health` | Health |
-| GET | `/actuator/prometheus` | Metrics |
-
-## Algorithm complexity
-
-Latest SKU/store state uses a hash map and is expected `O(n)` time, `O(k)` memory for `k` distinct keys. In production, Kafka partitions by `hash(sku, storeId)` so all updates for a key reach one ordered consumer; local state is backed by RocksDB and changelogged for recovery.
-
-Exact transaction deduplication is expected `O(n)` time and `O(u)` memory. Near-duplicate detection buckets by normalized business fingerprint, sorts by time, then scans: `O(n log n)` time. For data larger than memory, hash-partition by fingerprint first; equal fingerprints are guaranteed to meet in one bounded partition.
-
-```mermaid
-flowchart TD
-  Updates["Unordered inventory updates"] --> Key["Key by SKU and store"]
-  Key --> Compare{"Newer version?"}
-  Compare -->|"yes"| Replace["Replace materialized state"]
-  Compare -->|"no"| Ignore["Ignore stale update"]
-  Replace --> Latest["Latest state per key"]
-  Ignore --> Latest
-
-  Transactions["Large transaction dataset"] --> Normalize["Normalize business fields"]
-  Normalize --> Partition["Hash partition by fingerprint"]
-  Partition --> Sort["Sort by fingerprint and time"]
-  Sort --> Window["Scan bounded time window"]
-  Window --> Groups["Duplicate groups"]
-```
-
-## Repository layout
-
-| Path | Responsibility |
-|---|---|
-| `api/` | HTTP contracts, validation, and error responses |
-| `service/` | version ordering, idempotency, and query orchestration |
-| `persistence/` | latest-state and processed-update JPA models |
-| `algorithms/` | framework-independent stream reducers and deduplication |
-| `src/test/` | algorithm and end-to-end API verification |
-| `requests.http` | repeatable manual API examples |
-| `scripts/demo.ps1` | short interview demonstration |
-
-## Design choices and alternatives
-
-| Decision | Why | Cost / alternative |
-|---|---|---|
-| Absolute quantity updates | Missing an intermediate update does not corrupt the final state | Deltas provide better movement audit but require strict sequencing |
-| At-least-once plus idempotency | Realistic broker/client retry semantics | Processed IDs consume storage and need retention |
-| `(sku, storeId)` partition key | Preserves order per inventory item and spreads hot SKUs across stores | Region-wide aggregation needs a second repartition stage |
-| Version before event time | Clocks are unreliable across thousands of stores | Requires source ownership and monotonic version generation |
-| Eventual aggregate summaries | Low write amplification and regional availability | Summary may briefly lag store-level state |
-| Hash partitioning for huge files | Equal fingerprints meet with bounded memory | Skewed fingerprints require adaptive partition splitting |
-
-See [ARCHITECTURE.md](ARCHITECTURE.md), [INTERVIEW_GUIDE.md](INTERVIEW_GUIDE.md), and [SCALING.md](SCALING.md).
